service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-app-service
spec:
  selector:
    app: gke-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
